<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2015-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <!-- составитель акта -->
        <TextView style="@style/description_text"
            android:text="@string/author"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/author"/>

        <!-- date & time -->
        <TextView style="@style/description_text"
            android:text="@string/date_time_create"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/create_datetime"
            />

        <!-- place -->
        <TextView  style="@style/description_text"
            android:text="@string/place_create"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/place"
            />

        <!-- 1. violation type -->
        <TextView style="@style/paragraph_text"
            android:text="@string/violation_type"
        />


        <TextView style="@style/normal_text"
            android:id="@+id/violation_type"
            />

        <!-- code article -->
        <TextView  style="@style/description_text"
            android:text="@string/code_num"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/code_num"
            />

        <!-- 2. place -->
        <TextView style="@style/paragraph_text"
            android:text="@string/place_violation"
        />

        <!-- territory -->
        <TextView  style="@style/description_text"
            android:text="@string/territory"
            />

        <TextView style="@style/normal_text"
                android:id="@+id/territory"
            />

        <!-- forest category -->
        <TextView  style="@style/description_text"
            android:text="@string/forest_cat"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/forest_cat_type"
            />

        <!-- 3. who -->
        <TextView style="@style/paragraph_text"
            android:text="@string/violation_found_by"
            />

        <TextView  style="@style/description_text"
            android:text="@string/violation_found_by_desc"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/who"
            />

        <!-- 4. when -->
        <TextView style="@style/paragraph_text"
            android:text="@string/violation_when"
            />

        <TextView  style="@style/description_text"
            android:text="@string/violation_when_desc"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/when"
            />

        <!-- 5. crime -->
        <TextView style="@style/paragraph_text"
                  android:text="@string/crime"
            />

        <TextView  style="@style/description_text"
                   android:text="@string/crime_desc"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/crime"
            />

        <!-- 7. production -->
        <TextView style="@style/paragraph_text"
                  android:text="@string/production"
            />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/productionList">

        </ListView>

        <TextView style="@style/normal_text"
                  android:id="@+id/user_trans"
                  android:text="@string/user_trans"
            />

        <!-- 8. notes -->
        <TextView style="@style/paragraph_text"
                  android:text="@string/people_info"
            />

        <TextView  style="@style/description_text"
                   android:text="@string/people_info_desc"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/detector_say"
            />

        <!-- 9. crime say -->
        <TextView style="@style/paragraph_text"
                  android:text="@string/crime_say"
            />

        <TextView  style="@style/description_text"
                   android:text="@string/crime_say_desc"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/crime_say"
            />

        <!-- 10. people say-->
        <TextView style="@style/paragraph_text"
                  android:text="@string/people_say"
            />

        <TextView  style="@style/description_text"
                   android:text="@string/people_say_desc"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/author_say"/>

        <!-- description -->
        <TextView style="@style/paragraph_text"
                  android:text="@string/description"
            />

        <TextView  style="@style/description_text"
                   android:text="@string/description_desc"
            />

        <TextView style="@style/normal_text"
            android:id="@+id/description"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/textColorSecondary"
            />

        <!-- sign -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:layout_margin="10dp"
            />

    </LinearLayout>

</ScrollView>