<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:  NikitaFeodonit, nfeodonit@yandex.com
  ~ ******************************************************************************
  ~ Copyright (c) 2015-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/actionbar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >

            <!--http://stackoverflow.com/a/1662088/4727406-->

            <View
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <!-- title -->

                <TextView
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/doc_num"
                    android:layout_toStartOf="@id/doc_num"
                    android:text="@string/indictment"
                    style="@style/title_text"
                    />

                <!-- doc number -->

                <EditText
                    android:id="@+id/doc_num"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    style="@style/doc_num_text"
                    />

            </RelativeLayout>

            <!-- author -->

            <TextView
                android:text="@string/author"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- date & time -->

            <TextView
                android:text="@string/date_time_create_desc"
                style="@style/description_text"
                />

            <com.nextgis.maplibui.control.DateTime
                android:id="@+id/creation_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                style="@style/DatePickSpinner"
                />

            <!-- creation place -->

            <TextView
                android:text="@string/creation_place_desc"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/creation_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_create_hint"
                />

            <!-- 1. violation type -->

            <TextView
                android:text="@string/violation_type"
                style="@style/paragraph_text"
                />

            <Spinner
                android:id="@+id/violation_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                />

            <!-- code article -->

            <TextView
                android:text="@string/code_num"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/code_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- 2. place -->

            <TextView
                android:text="@string/place_violation"
                style="@style/paragraph_text"
                />

            <!-- territory -->

            <TextView
                android:text="@string/territory"
                style="@style/description_text"
                />

            <TextView
                android:id="@+id/territory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/click_to_set_value"
                style="@style/CoordinatesPicker"
                />


            <!-- forest category -->

            <TextView
                android:text="@string/forest_cat"
                style="@style/description_text"
                />

            <Spinner
                android:id="@+id/forest_cat_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                />

            <!-- 3. who -->

            <TextView
                android:text="@string/violation_found_by"
                style="@style/paragraph_text"
                />

            <TextView
                android:text="@string/violation_found_by_desc"
                style="@style/description_text"
                />

            <com.nextgis.maplibui.control.DateTime
                android:id="@+id/date_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                style="@style/DatePickSpinner"
                />

            <EditText
                android:id="@+id/who"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/who_hint"
                />

            <!-- 4. when -->

            <TextView
                android:text="@string/violation_when"
                style="@style/paragraph_text"
                />

            <TextView
                android:text="@string/violation_when_desc"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/when"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/when_hint"
                />

            <!-- 5. crime -->

            <TextView
                android:text="@string/crime"
                style="@style/paragraph_text"
                />

            <TextView
                android:text="@string/crime_desc"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/crime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crime_hint"
                />

            <!-- 6. sheet -->

            <Button
                android:id="@+id/create_sheet"
                android:text="@string/create_sheet"
                style="@style/doc_button"
                />

            <!-- 7. production -->

            <Button
                android:id="@+id/create_production"
                android:text="@string/create_production"
                style="@style/doc_button"
                />

            <!-- 8. notes -->

            <TextView
                android:text="@string/people_info"
                style="@style/paragraph_text"
                />

            <TextView
                android:text="@string/people_info_desc"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/detector_say"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- 9. crime say -->

            <TextView
                android:text="@string/crime_say"
                style="@style/paragraph_text"
                />

            <TextView
                android:text="@string/crime_say_desc"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/crime_say"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- 10. people say-->

            <TextView
                android:text="@string/people_say"
                style="@style/paragraph_text"
                />

            <TextView
                android:text="@string/people_say_desc"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/author_say"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- description -->

            <TextView
                android:text="@string/description"
                style="@style/paragraph_text"
                />

            <TextView
                android:text="@string/description_desc"
                style="@style/description_text"
                />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                />

            <!-- vehicles -->

            <Button
                android:id="@+id/create_vehicles"
                android:text="@string/create_vehicles"
                style="@style/doc_button"
                />

            <!-- Photo -->

            <Button
                android:id="@+id/create_phototable"
                android:text="@string/create_photo_table"
                style="@style/doc_button"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/textColorSecondary"
                />

            <!-- save -->

            <Button
                android:id="@+id/save"
                android:text="@string/save"
                style="@style/doc_button"
                />

            <!-- sign and save -->

            <Button
                android:id="@+id/sign_and_send"
                android:text="@string/sign_and_send"
                style="@style/doc_button"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
