<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2015-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity"
    >
    <item
        android:id="@+id/docs_filter"
        android:icon="@drawable/ic_action_content_filter_list"
        android:title="@string/docs_filter"
        android:orderInCategory="100"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/show_indictments"
                android:title="@string/show_indictments"
                android:checkable="true"
                android:checked="false"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/show_sheets"
                android:title="@string/show_sheets"
                android:checkable="true"
                android:checked="false"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/show_notes"
                android:title="@string/show_notes"
                android:checkable="true"
                android:checked="false"
                app:showAsAction="never"
                />
        </menu>
    </item>
    <item
        android:id="@+id/action_add_indictment"
        android:title="@string/action_create_indictment"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_add_sheet"
        android:title="@string/action_create_sheet"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_add_field_work"
        android:title="@string/action_create_field_works"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_add_note"
        android:title="@string/action_create_note"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
<!--
    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
-->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
